Added preference UI to make reset optional
Added new controls to preference UI
Added new keys to shcema to store the preference values.

--- a/locale/POTFILES.in
+++ b/locale/POTFILES.in
@@ -13,7 +13,9 @@
 ../ui/PopupView.js
 ../ui/TableView.js
 ../utils/Constants.js
+../utils/DateTimeUtils.js
 ../utils/EventBroadcaster.js
 ../utils/GenUtils.js
 ../utils/Logger.js
 ../utils/TypeUtils.js
+../utils/UIUtils.js
