Some minor improvements
Removed file line numbers from language po files.

--- a/locale/POTFILES.in
+++ b/locale/POTFILES.in
@@ -16,6 +16,7 @@
 ../utils/DateTimeUtils.js
 ../utils/EventBroadcaster.js
 ../utils/GenUtils.js
+../utils/GtkUtils.js
 ../utils/Logger.js
 ../utils/TypeUtils.js
 ../utils/UIUtils.js
