--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
-network-stats@gnome.noroadsleft.xyz.shell-extension.zip
+dist/*
+node_modules/*
 network-stats@gnome.noroadsleft.xyz.zip
 locale/**/*.mo
