Updated language files

--- a/locale/POTFILES.in
+++ b/locale/POTFILES.in
@@ -1,24 +1,28 @@
-../App.js
-../AppController.js
-../AppSettingsModel.js
-../extension.js
-../net/DevicePresenter.js
-../net/DeviceMonitor.js
-../net/NetworkMonitor.js
-../prefs.js
-../ui/AppView.js
-../ui/DeviceMenuTitleItem.js
-../ui/ExpandableDeviceMenuItem.js
-../ui/ExpandableMenuItem.js
-../ui/MainPanel.js
-../ui/PopupView.js
-../ui/TableView.js
-../utils/Broadcasters.js
-../utils/Constants.js
-../utils/DateTimeUtils.js
-../utils/EventBroadcaster.js
-../utils/GenUtils.js
-../utils/GtkUtils.js
-../utils/Logger.js
-../utils/TypeUtils.js
-../utils/UIUtils.js
+../extension.ts
+../lib/App.ts
+../lib/ui/AppView.ts
+../lib/ui/PopupView.ts
+../lib/ui/MainPanel.ts
+../lib/ui/TableView.ts
+../lib/ui/ExpandableDeviceMenuItem.ts
+../lib/ui/DeviceMenuTitleItem.ts
+../lib/ui/ExpandableMenuItem.ts
+../lib/net/DeviceMonitor.ts
+../lib/net/NetworkMonitor.ts
+../lib/net/DevicePresenter.ts
+../lib/utils/Logger.ts
+../lib/utils/gjs.ts
+../lib/utils/GtkUtils.ts
+../lib/utils/Broadcasters.ts
+../lib/utils/Constants.ts
+../lib/utils/EventBroadcaster.ts
+../lib/utils/UIUtils.ts
+../lib/utils/GenUtils.ts
+../lib/utils/DateTimeUtils.ts
+../lib/utils/ExtensionUtils.ts
+../lib/utils/TypeUtils.ts
+../lib/utils/ReverseMap.ts
+../lib/AppSettingsModel.ts
+../lib/AppController.ts
+../prefs.ts
+../ambient.d.ts
